app/assets/stylesheets/redesign/_user.css.scss
// Page header
.user-account-page-title {
  background-color: $peach-bg;
  margin-top: 70px; // $fp-menu-height
}

.user-account-title {
  color: #000000;
  text-transform: none;
}
// @end Page header
// ---------------

// Account
.page-content.user {
	padding-top: 0;

	.row {
		margin-top:20px;
	}

	.avatar {
		width: 100px;
		height: 100px;
		border-radius: 100%;
		margin-right: 20px;
		margin-left: 110px;
		overflow: hidden;
		display:block;
		&.empty {
			background: url('_reg/avatar-empty.png') no-repeat center center #e1e1e1;
		}
	}
}
// @end Account
// ---------------

// Moodboard
.page-content.moodboard {
  .category--item {
    .details { text-transform: uppercase;}

    // - Override style.css
    .btn-black { color: #fff;}
  }
}
// @end Moodboard
// ---------------

.ordered-item-image {
  width: 120px;
  margin-left: 0px;
}

h2.order-number {
  font-size: 15px;
}

.table.order-items {

  thead {
    border-top: 2px solid #ddd;

    tr th {
      text-transform: uppercase;
      text-align: center;
      font-size: 12px;
    }
  }

  tbody tr.item  {
    border-bottom: 2px solid #ddd;

    td {
      vertical-align: top;
    }
  }
}

.table.orders-table {
  margin-top: 4rem;

  thead tr th {
    text-transform: uppercase;
    text-align: left;
    font-size: 12px;
    background-color: #f9f9f9;
  }

  thead tr th.returns-column, > tbody > tr > td.returns-column, {
    background-color: white !important;
    border-bottom: none;
    padding-left: 6rem;
    padding-right: 0;
  }
}

.table.order-items, .table.orders-table > tbody > tr > td {
  border: none;
  vertical-align: middle;
  text-align: left;
}

.table > tbody > tr > td {

  a.order-details:hover {
    color: #355e6d
  }
}

.support > a:hover {
  color: #355e6d
}

.back-to-orders {
  height: 45px;
  background-color: #033649;
  color: #FFFFFF;
  padding: 0 !important;
  line-height: 45px;
  width: 200px;

  &:hover {
    background-color: #355e6d;
  }

  a {
    color: #FFFFFF;
    padding: 0 !important;
  }
}

tbody tr.total td p  {
  text-align: right;
}

h3.phone span {
  text-transform: none;
}

.page-title.returns-title {
  background-color: #f7e0d3;

  h1 {
    text-transform: none;
  }

  h2 {
    font-family: forum;
    text-transform: uppercase;
    font-size: 40px;
    margin-top: 0;
  }
}

@media only screen and (max-width: 800px) {

  .table > tbody > tr > td {
    border-top: none;
    clear: none;
  }

  .returns .chosen-container-single.form-control {
    margin-bottom: 2.7rem;
  }
}

.order {
  .page-title--details.order {
    color: black;
    h1 {
      color: black;
    }
  }
}

h1.order {
  color: black;
}

a.btn.return {
  color: #FFFFFF;
  width: 92%;
  background-color: #444444;
  font-size: 12px;

  &:hover {
    background-color: #eeddf0;
    color: black !important;
  }
}

